--- a/style.css
+++ b/style.css
@@ -19,15 +19,15 @@ main {
 }
 
 .calculator {
-    width: 200px;
-    height: 300px;
-    background-color: maroon;
+    width: 800px;
+    height: 500px;
+    background-color: rgb(12, 2, 37);
     border-radius: 5px;
     box-shadow: 2px 2px 2px black;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding: 12px;
+    padding: 2px 12px 2px 12px;
     box-sizing: border-box;
     /* ^borderbox = tightly packed, contentbox = loosely packed  */
 }
@@ -42,8 +42,20 @@ main {
     justify-content: space-between;
 }
 
+.calc_row_knobs {
+    height: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    
+
+}
+
+
 .display {
     background-color: black;
+    /* padding-top: 2px; */
 }
 
 .button {
@@ -54,6 +66,32 @@ main {
     flex: 1;
     /* represents the numerator based on the amount of something */
     margin: 2px;
+}
+
+.button-black {
+    width: 32px;
+    height: 20px;
+    background-color: black;
+    border-radius: 4px;
+    flex: 1;
+    /* represents the numerator based on the amount of something */
+    margin: 2px;
+    text-align: left;
+    
+    color: white;
+    /* font-size: 5px; */
+
+}
+
+.button-round {
+    width: 15px;
+    height: 15px;
+    background-color: black;
+    border-radius: 50%;
+    /* flex: 1; */
+    /* represents the numerator based on the amount of something */
+    margin: 2px;
+    
 }
 
 .long {
